게시물 등록/수정/삭제 기능 추가

--- a/front-end/src/main/resources/application.yml
+++ b/front-end/src/main/resources/application.yml
@@ -1,4 +1,8 @@
-# spring.application.name : spring boot application ?? ??
+# spring.application.name : Application Name 지정 (front-end로 고정)
+# spring.datasource : 연결 DB 설정
+# spring.sql.init.mode : DB 처음 연결 되었을 때의 초기화 SQL 실행 여부 확인
+# spring.h2.console : H2 DB Console 페이지 오픈 여부 확인
+# spring.mvc.hiddenmethod.filter.enabled : MVC 환경에서의 Hidden Method 사용 여부 확인 (Form 을 통해 PUT, DELETE 사용하고자 할 때 필요함)
 spring:
   application:
     name: front-end
@@ -14,13 +18,21 @@ spring:
     console:
       enabled: true
       path: /h2_console
+  mvc:
+    hiddenmethod:
+      filter:
+        enabled: true
 
+# mybatis 설정 (mybatis-config.xml 파일 생성하지 않기 위함)
 mybatis:
   configuration:
     map-underscore-to-camel-case: true
 
-# server.port : ?? ?? ??
-# server.servlet.encoding
+# server.port : 8080 으로 고정
+# server.servlet.encoding : Embedded Tomcat의 인코딩 설정
+# server.shutdown
+#  : Spring Boot 2.3 버전 이후부터 재공되는 기능
+#  : 정상적으로 종료할 수 있도록 기다려주는 기본 시간은 30초. 만약 조정하고 싶다면 spring.lifecycle.timeout-per-shutdown-phase=1m 처럼 옵션 추가
 server:
   port: 8080
   servlet:
@@ -30,12 +42,7 @@ server:
       force: true
   shutdown: graceful
 
-# server.port : ?? Listen ?? ??
-# server.servlet.encoding : Embedded Tomcat? ??? ??
-# server.servlet.jsp.init-parameters.development : jsp ?? ? ??? ?? ?? ??
-# server.shutdown
-#  : Spring Boot 2.3 ?? ???? ???? ??
-#  : ????? ??? ? ??? ????? ?? ??? 30?. ?? ???? ??? spring.lifecycle.timeout-per-shutdown-phase=1m ?? ?? ??
+# management.endpoints.web.exposure.include : Actuator Open URI 지정. 여기서는 "health,info" 지정
 management:
   endpoints:
     web:
