--- a/front-end/build.gradle
+++ b/front-end/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     /* Spring Boot - DB */
     implementation 'org.springframework.boot:spring-boot-starter-jdbc'
     implementation 'org.mybatis.spring.boot:mybatis-spring-boot-starter:2.2.2'
-    runtimeOnly 'com.h2database:h2'
+    runtimeOnly 'mysql:mysql-connector-java'
 
     /* Lombok */
     compileOnly 'org.projectlombok:lombok'
