--- a/board-two/build.gradle
+++ b/board-two/build.gradle
@@ -29,6 +29,8 @@ dependencies {
 
 	/*swagger*/
 	implementation 'org.springdoc:springdoc-openapi-ui:1.6.8'
+
+	implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.1'
 }
 
 tasks.named('test') {
