--- a/front-end/build.gradle
+++ b/front-end/build.gradle
@@ -38,6 +38,8 @@ dependencies {
 
     /* WebClient */
     implementation 'org.springframework.boot:spring-boot-starter-webflux'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.1.1'
 }
 
 tasks.named('test') {
