--- a/front-end/src/main/resources/application.yml
+++ b/front-end/src/main/resources/application.yml
@@ -41,3 +41,8 @@ management:
     web:
       exposure:
         include: "health,info"
+
+eureka:
+  client:
+    register-with-eureka: true
+    fetch-registry: true
